# better-resume

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/config/: resume_data.toml  settings.py
app/routers/: auth.py  docs.py  resume.py
app/schemas/: auth.py  docs.py
app/services/: gemini_client.py  google_auth.py  google_docs.py  resume_generator.py  toml_loader.py
app/utils/: language.py
